--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "kurraz-soft/yii2-file-upload-model-behavior",
   "description": "Simple Yii2 ActiveRecord model behavior for single file upload",
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "license": "MIT",
   "authors": [
     {
